Prevent category headers from wrapping

--- a/src/app/commands-ui/secondary-arg-buttons/secondary-arg-buttons.component.scss
+++ b/src/app/commands-ui/secondary-arg-buttons/secondary-arg-buttons.component.scss
@@ -67,4 +67,5 @@ h4 {
   border: 0;
   outline: 0;
   border-radius: 4px;
+  white-space: nowrap;
 }
